@@ -19,39 +19,6 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="TextLabel14">
-       <property name="text">
-        <string>&amp;Number of tracks to rip at a time:</string>
-       </property>
-       <property name="wordWrap">
-        <bool>false</bool>
-       </property>
-       <property name="buddy">
-        <cstring>kcfg_maxWavFiles</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QSpinBox" name="kcfg_maxWavFiles">
-       <property name="minimum">
-        <number>1</number>
-       </property>
-       <property name="maximum">
-        <number>99999</number>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
     <widget class="QCheckBox" name="kcfg_autoEjectAfterRip">
      <property name="text">
       <string>&amp;Auto-eject CD after last track is ripped</string>
@@ -164,7 +131,6 @@
  </customwidgets>
  <tabstops>
   <tabstop>kcfg_beepAfterRip</tabstop>
-  <tabstop>kcfg_maxWavFiles</tabstop>
   <tabstop>kcfg_autoEjectAfterRip</tabstop>
   <tabstop>kcfg_autoEjectDelay</tabstop>
  </tabstops>
